2005-06-23  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/global.itely (Creating titles): Correct
	misprint in example. Thanks to Rob Vlasaty.

2005-06-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.5.32

	* lily/lily-parser-scheme.cc (LY_DEFINE): don't set 'parser
	variable in lily module

	* scm/framework-ps.scm (output-classic-framework): error message
	regarding the classic framework.

	* Documentation/user/henle-flat-gray.png (Module): new file.

	* Documentation/user/baer-flat-gray.png (Module): new file.

	* scm/output-lib.scm (fret-number-tablature-format): vcenter and
	whiteout for markups.

	* buildscripts/substitute-encoding.py (note_glyph): include _ in
	regex too. This fixes change clef appearance in PDF. 

	* ttftool/include/*: remove.

	* configure.in (reloc_b): remove TTFTOOL_ENDIAN

	* config.make.in (WINDRES): remove TTFTOOL_ENDIAN.

	* lily/GNUmakefile (MODULE_INCLUDES): remove ttftool

	* ttftool/*: remove ttftool subdirectory.

	* GNUmakefile.in (SUBDIRS): remove ttftool subdirectory.

	* lily/ttf.cc (print_header): new file. Convert to type42, using
	FreeType to parse the TTF. 

	* ttftool/parse.c (readPostTable): ugh. Kludge: nglyphs in maxp
	and post table may differ. Pass around post_nglyphs as well.

2005-06-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/music-functions-init.ly (musicMap): new music function
	musicMap. 
	
2005-06-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/mutopia-rules.make: anti-alias-factor = 2

	* scm/ps-to-png.scm (make-ps-images): cleanup multipage vs. single
	page switch.

	* make/lilypond-vars.make (LILYPOND_BOOK_FLAGS): set
	anti-alias-factor for lilypond-book runs.

	* scm/ps-to-png.scm (scale-down-image): new function.
	(my-system): new function.
	(make-ps-images): blow up GS resolution by anti-alias-factor,
	scale down image by anti-alias-factor.  This improves appearance
	of bitmaps
	(make-ps-images): remove showpage. Fixes spurious empty png at
	end.
